# steep

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: lint.yml
steep/: __about__.py  dataset.py  loss.py  trainer.py  utils.py
steep/config/: config.yaml  global_vars.yaml
steep/config/dataset/: brain_pretrain.yaml
steep/config/loss/: mse.yaml  vae.yaml
steep/config/model/: stagate.yaml  stagate_vae.yaml
steep/config/optimizer/: adamw.yaml
steep/config/scheduler/: cosine.yaml
steep/config/trainer/: default.yaml
steep/models/: ._graph.py.swp  __init__.py  _compression.py  _graph.py  _sparsify.py
steep/utils/: __init__.py  _general.py  _graph.py  _pyg.py
tests/: .test_models_graph.py.swp  conftest.py  test_models_graph.py  test_mog.py  test_preprocess.py  viz_mog.py
tests/test_outputs/: final_sparsity_check.pt
